# local_arcbot_testing

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.agents/skills/architecture-bot/: SKILL.md
.github/actions/generate-diagrams/: action.yml
.github/workflows/: architecture-diagrams.yml
docs/architecture/: api_gateway_flow.md  order_creation_flow.md  payment_processing_flow.md  refund_processing_flow.md  uml_domain_model.md
scripts/: run_architecture_bot.sh  run_architecture_bot_mock.sh
src/: __init__.py  api_gateway.py  architecture_legend.md  models.py  order_repository.py  payment_service.py
